[package]
name = "eyengine"
version = "0.1.0"
authors = [ "F-seeeye <fseeeye@gmail.com>" ]
edition = "2021"
description = "A Real-Time 3D Game Engine"
license = "Apache-2.0"
repository = "https://github.com/fseeeye/EyeEngine-Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.12", features = ["spirv"] } # graphics API wrapper
winit = "0.26" # window library

env_logger = "0.9" # logger for wgpu.
legion = "0.4" # ECS library
nalgebra = "0.29" # Linear algebra library

pollster = "0.2" # (Temp) minimal async executor

[build-dependencies]
anyhow = "1" # Error handler
fs_extra = "1.2" # Expanding opportunities standard library std::fs and std::io
glob = "0.3" # matching file paths against Unix shell style patterns.
shaderc = "0.7" # Compile GLSL/HLSL into SPIR-V
